<resources>
    <string name="app_name" translatable="false">emojidex</string>
    <string name="app_name_catalog" translatable="false">emojidex Seal Kit</string>
    <string name="app_name_photo_editor" translatable="false">emojidex Photo Editor</string>
    <string name="action_settings">Settings</string>
    <string name="menu_text_copy">Copy Text</string>
    <string name="menu_clear_and_paste">Clear + Paste</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_clear_search">Clear Search Results</string>
    <string name="menu_conversion_switch">Toggle Conversion</string>
    <string name="menu_emojidex_web">emojidex Web</string>
    <string name="menu_settings">Settings</string>
    <string name="emojidex_url" translatable="false">https://www.emojidex.com</string>
    <string name="menu_login">Sign in to emojidex</string>
    <string name="menu_login_success">Sign in : </string>
    <string name="menu_login_cancel">Sign in canceled.</string>
    <string name="menu_new_emoji">+ New emoji</string>
    <string name="menu_new_success"> was successfully created.</string>
    <string name="menu_new_failure">emoji registration failed.</string>
    <string name="menu_following">Following</string>
    <string name="menu_followers">Followers</string>
    <string name="webview_loading">Loading…</string>
    <string name="search">Search</string>
    <string name="favorite">Favorites</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="share">Share</string>
    <string name="text_hint_emoji">You can preview or convert text with emoji here.</string>
    <string name="text_hint_text">Enter or paste text with emoji here.</string>
    <string name="clear">Clear</string>
    <string name="clear_and_paste">Clear + Paste</string>
    <string name="convert">Convert</string>
    <string name="register_favorite">Add this emoji to your favorites?</string>
    <string name="register_success">Registered</string>
    <string name="register_done">Already registered</string>
    <string name="register_failure">Registration failed</string>
    <string name="delete_favorite">Remove emoji from your favorites?</string>
    <string name="clipboard">Copied to the clipboard.</string>
    <string name="close">Close</string>
    <string name="download_done">Already downloaded.</string>
    <string name="download_success">Downloaded.</string>
    <string name="download_failure">Downloading failed.</string>
    <string name="delete_download_confirm">Remove all emoji data?</string>
    <string name="delete_download">Remove</string>
    <string name="seal_send">Send seal</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="back">Back</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="newest">Newest</string>
    <string name="popular">Popular</string>
    <string name="category">Category</string>
    <string name="emoji">Emoji</string>
    <string name="search_category">Select a Category</string>
    <string name="search_emoji">Enter an emoji code to search for</string>
    <string name="hit"> hits.</string>
    <string name="message_unsupported_seal">This app does not support Seals</string>
    <string name="editor_enable_check_message">The emojidex keyboard is not enabled.\nWould you like to enable it?</string>
    <string name="editor_enable_check_yes">Yes</string>
    <string name="editor_enable_check_no">No</string>
    <string name="editor_show_tutorial_message">Show tutorial?</string>
    <string name="editor_message_text_copy">Copy text.</string>
    <string name="editor_message_text_clear_and_paste">Clear and paste text.</string>
    <string name="editor_message_text_clear">Clear text.</string>
    <string name="editor_message_search_clear">Clear search results.</string>
    <string name="editor_message_conversion_on">Conversion ON</string>
    <string name="editor_message_conversion_off">Conversion OFF</string>
    <string name="ime_category_text_my_emoji">My emoji</string>
    <string name="ime_category_text_history">History</string>
    <string name="ime_category_text_favorite">Favorite</string>
    <string name="ime_category_text_search">Search</string>
    <string name="ime_category_text_index">Index</string>
    <string name="ime_category_text_all">All</string>
    <string name="ime_category_text_gestures">Gestures</string>
    <string name="ime_category_text_abstract">Abstract</string>
    <string name="ime_category_text_tools">Tools</string>
    <string name="ime_category_text_faces">Faces</string>
    <string name="ime_category_text_symbols">Symbols</string>
    <string name="ime_category_text_nature">Nature</string>
    <string name="ime_category_text_food">Food</string>
    <string name="ime_category_text_cosmos">Cosmos</string>
    <string name="ime_category_text_transportation">Transportation</string>
    <string name="ime_category_text_places">Places</string>
    <string name="ime_category_text_people">People</string>
    <string name="ime_category_text_objects">Objects</string>
    <string name="ime_message_update_start">Updating emoji...</string>
    <string name="ime_message_update_complete">emoji update complete</string>
    <string name="ime_message_already_update">Your emoji are up to date</string>
    <string name="settings_title">emojidex keyboard settings</string>
    <string name="settings_category_general">General</string>
    <string name="settings_category_update">Update</string>
    <string name="settings_category_data">Data</string>
    <string name="settings_category_other">Other</string>
    <string name="settings_keyboard_button">Default keyboard</string>
    <string name="settings_keyboard_button_summary">Set your default keyboard here</string>
    <string name="settings_text_size">Text size</string>
    <string name="settings_entry_default_keyboard_nothing">Nothing</string>
    <string name="settings_update_interval">Update interval</string>
    <string name="settings_update_now">Update now</string>
    <string name="settings_logout_emojidex_button">Sign out from emojidex</string>
    <string name="settings_logout_emojidex_confirm">Sign out from emojidex?</string>
    <string name="settings_logout_emojidex_succeeded">Sign out</string>
    <string name="settings_logout_emojidex_failed">Failed to sign out</string>
    <string name="settings_delete_favorite_button">Clear Favorites</string>
    <string name="settings_delete_favorite_confirm">Clear all favorites?</string>
    <string name="settings_delete_favorite_succeeded">Favorites cleared</string>
    <string name="settings_delete_favorite_failed">Failed to clear favorites</string>
    <string name="settings_delete_history_button">Clear History</string>
    <string name="settings_delete_history_confirm">Clear all history?</string>
    <string name="settings_delete_history_succeeded">History cleared</string>
    <string name="settings_delete_history_failed">Failed to clear history</string>
    <string name="settings_delete_search_button">Clear search results</string>
    <string name="settings_delete_search_confirm">Clear all search result?</string>
    <string name="settings_delete_search_succeeded">Search results cleared.</string>
    <string name="settings_delete_search_failed">Failed to clear search results.</string>
    <string name="settings_delete_cache_button">Clear cache</string>
    <string name="settings_delete_cache_confirm">Clear all cache?</string>
    <string name="settings_delete_cache_succeeded">Cache cleared.</string>
    <string name="settings_delete_cache_failed">Failed to clear cache.</string>
    <string name="settings_tutorial_button">Tutorial</string>
    <string name="settings_license_button">License</string>
    <string name="settings_license_text" translatable="false">colorpicker.aar\n\n
        Copyright(C) jaredrummler\n\n

        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at\n\n

        http://www.apache.org/licenses/LICENSE-2.0\n\n

        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.</string>
    <string name="search_dialog_title">Searching...</string>
    <string name="search_dialog_message">Please wait a moment.</string>
    <string name="search_dialog_cancel">Cancel</string>
    <string name="send_seal_dialog_title">Sending seal...</string>
    <string name="send_seal_dialog_message">Please wait a moment.</string>
    <string name="send_seal_dialog_cancel">Cancel</string>
    <string name="send_seal_not_found">A seal for this emoji could not be found.</string>
    <string name="send_seal_not_found_ok">OK</string>
    <string name="select_dialog_title">Please select</string>
    <string name="usagestats_dialog_checkbox_text">Don\'t display from now on</string>
    <string name="usagestats_dialog_ignore_button">Ignore</string>
    <string name="usagestats_dialog_settings_button">Settings</string>
    <string name="ime_category_id_my_emoji" translatable="false">my emoji</string>
    <string name="ime_category_id_history" translatable="false">history</string>
    <string name="ime_category_id_favorite" translatable="false">favorite</string>
    <string name="ime_category_id_search" translatable="false">search</string>
    <string name="ime_category_id_index" translatable="false">index</string>
    <string name="ime_category_id_all" translatable="false">all</string>
    <string name="preference_key_default_keyboard" translatable="false">defaultKeyboard</string>
    <string name="preference_key_update_interval" translatable="false">updateInterval</string>
    <string name="preference_key_clear_favorite" translatable="false">clearFavorite</string>
    <string name="preference_key_clear_history" translatable="false">clearHistory</string>
    <string name="preference_key_clear_search_result" translatable="false">clearSearchResult</string>
    <string name="preference_entryvalue_default_keyboard_default" translatable="false">@string/preference_entryvalue_default_keyboard_nothing</string>
    <string name="preference_entryvalue_update_interval_default" translatable="false">604800000</string>
    <string name="usagestats_dialog_message">In order to detect what app to send a seal to, emojidex must have permission to view app usage.</string>
    <string name="photo_editor_help_title">Help</string>
    <string name="photo_editor_help_description">emojidexPhotoEditor lets you add emoji to any picture or image!</string>
    <string name="photo_editor_help_new">Select base image [this will clear the current canvas].</string>
    <string name="photo_editor_help_save">Save the image.</string>
    <string name="photo_editor_help_effect">Applies a effect to the image.</string>
    <string name="photo_editor_help_add">Display a emojidex keyboard for adding emojis.</string>
    <string name="photo_editor_help_move">This tool lets you move emoji by dragging them.</string>
    <string name="photo_editor_help_scale">This tool lets you change the size of emoji.</string>
    <string name="photo_editor_help_roll">This tool lets you rotate emoji.</string>
    <string name="photo_editor_help_v_flip">This tool lets you flip vertical emoji.</string>
    <string name="photo_editor_help_h_flip">This tool lets you flip horizontal emoji.</string>
    <string name="photo_editor_help_clear">Clear all emoji.</string>
    <string name="photo_editor_help_close">Close</string>
</resources>