<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp" >

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@drawable/emojidex_logo"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/app_name" />

        <ImageButton
            android:id="@+id/settings_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@android:drawable/ic_menu_preferences"
            android:background="@drawable/background_blank"
            android:contentDescription="@string/settings"
            android:layout_marginLeft="5dp"
            android:onClick="openSettings"/>

        <ImageView
            android:id="@+id/blank"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:visibility="invisible"/>

        <ImageButton
            android:id="@+id/share_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@android:drawable/ic_menu_share"
            android:background="@drawable/background_blank"
            android:contentDescription="@string/share"
            android:onClick="shareData"/>

        <ImageButton
            android:id="@+id/last_share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/background_blank"
            android:contentDescription="@string/share"
            android:layout_marginLeft="5dp"
            android:onClick="shareDataLastSelected" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp">

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:gravity="top"
            android:textSize="20sp"
            android:hint="@string/text_hint_emoji" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ToggleButton
                android:id="@+id/toggle_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:textOn="@string/convert"
                android:textOff="@string/convert"
                android:checked="true"
                android:onClick="clickToggleButton"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/clear"
                android:onClick="clearText"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
